Fixed some image links and updated main site overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,7 @@ html {
   width: 100%;
   height: 100%;
   background: #f1f3f4;
+  overflow-x: hidden;
 }
 
 body {
